增加发表需求帖API, 未完成
