# api/urls.py
@@ -22,6 +22,7 @@ urlpatterns = [
     url('helloworld$', views.HelloWorldAPI.as_view()),
     url('v1/login$', views.LoginView.as_view()),
     url('v1/register$', views.RegisterAPI.as_view()),
+    url('v1/post-posttag$', views.auth.CreatePostTagAPI.as_view()),
     url('v1/modify-password$', views.ModifyPasswordAPI.as_view()),
     url('v1/verify-token$', verify_jwt_token),
 ]
